feat: display dynamic data on currency exchange chart

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -9,5 +9,6 @@
     "interval": "Inverval",
     "exchangeRates": "Exchange rates",
     "currentWeek": "Current week",
-    "previousWeek": "Previous week"
+    "previousWeek": "Previous week",
+    "date": "Date"
 }
