--- a/src/i18n/locales/he.json
+++ b/src/i18n/locales/he.json
@@ -9,5 +9,6 @@
     "interval": "מרווח",
     "exchangeRates": "שערי חליפין",
     "currentWeek": "השבוע הנוכחי",
-    "previousWeek": "שבוע שעבר"
+    "previousWeek": "שבוע שעבר",
+    "date": "תַאֲרִיך"
 }
