refactor: add universal template for error messages

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -10,5 +10,6 @@
     "exchangeRates": "Exchange rates",
     "currentWeek": "Current week",
     "previousWeek": "Previous week",
-    "date": "Date"
+    "date": "Date",
+    "unexpectedError": "An error occured {cause}. Try refreshing the page"
 }
