fix: add email to translations

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -26,5 +26,6 @@
     "editUser": "Edit user",
     "noData": "No data",
     "submit": "Submit",
-    "all": "All"
+    "all": "All",
+    "email": "Email"
 }
