--- a/src/i18n/locales/he.json
+++ b/src/i18n/locales/he.json
@@ -25,5 +25,6 @@
     "active": "פָּעִיל",
     "inactive": "לֹא פָּעִיל",
     "submit": "שלח",
-    "all": "את כל"
+    "all": "את כל",
+    "email": "אימייל"
 }
