--- a/src/i18n/locales/he.json
+++ b/src/i18n/locales/he.json
@@ -26,5 +26,7 @@
     "inactive": "לֹא פָּעִיל",
     "submit": "שלח",
     "all": "את כל",
-    "email": "אימייל"
+    "email": "אימייל",
+    "currentUser": "משתמש נוכחי",
+    "signout": "התנתק"
 }
